cozycast-server/npm-website/src/public/css/styles.css
/* ... */
#videoBig, #video {
    min-width: 0;
    min-height: 0;
}

#videoBig {
    flex-grow: 1;
    grid-area: video;
    position: relative;
    background-color: var(--cozyColor);
}

#videosizer {
    display: flex;
}

#video {
    flex-grow: 1;
}

#chatbox {
    margin: 15px 10px 5px 10px;
    cursor: text;
    position: relative;
}

.editMode{
    top: -1.9em;
    right: 0;
    position: absolute;
    font-size: 1em;
    background-color: rgba(0, 0, 0, 0.3);
    border-radius: 0.35em;
    border: 2px solid black;
    padding: 0.05em 0.3em;
    font-weight: bold;
    height: auto;
    color: white;
}

.editMode:hover{
    background-color: var(--cozyOrange);
}

.messageEditBadge{
    font-size: 0.6em;
    color: rgba(255, 255, 255, 0.7);
}

#pagetoolbar {
    align-content: flex-end;
}

#controls{
    height: 3em;
    display: flex;
    justify-content: space-between;
    align-self: center;
    overflow: fragments;
}

.controlsFullscreen{
    background-color: transparent;
    background: none;
    pointer-events:none;
}

.controlsFullscreen .btn {
    pointer-events: all;
}

.toolbarFullscreen{
    z-index: 2;
    position: absolute;
    bottom: 0;
    width: 100%;
}

.hideToolbar{
    opacity: 0;
    transition: opacity 1s;
    transition-timing-function: ease-in;
}

.hideToolbar:hover{
    opacity: 1;
    transition: opacity 0s;
}

.subControls{
    display: flex;
    grid-gap: .5em;
    margin: .5em;
    min-width: 0;
}

.userlist {
    background: var(--cozyColorMenu) var(--cozycast-noise);
    display: flex;
    gap: 5px;
    overflow: auto;
    overflow: overlay;
}

.userlist.bottom .user:first-child {
    margin-left: auto;
}

.userlist.bottom .user:last-child {
    margin-right: auto;
}

.userlist.left .user:first-child {
    margin-top: auto;
}

.userlist.left .user:last-child {
    margin-bottom: auto;
}

.userlist.bottom {
    flex-grow: 1;
    min-width: 0;
    scrollbar-width: thin;
}

.userlist.left {
    min-height: 100%;
    flex-direction: column;
    width: 5em;
    max-height: 100%;
}

.userprofileName{
    white-space: nowrap;
}


.visibleControls{
    background: var(--cozyColorMenu) var(--cozycast-noise);
}

.userlist.bottom.big {
    height: 5em;
}

.userlist.bottom.small {
    height: 4.5em;
}

.userlistSidebar {
    overflow: hidden auto;
    display: flex;
    flex-direction: column;
    margin-left: 1em;
    margin-top: 1em;
    gap: 15px;
}

.userSidebar {
    display: grid;
    grid-template-columns: 4em 1fr;
}

.usernameSidebar {
    display: flex;
    margin-left: 0.5em;
    align-items:baseline;
    flex-direction: column;
    justify-content: center;
}



.btn {
    color: white;
    border-radius: 0.2em;
    transition: background-color 0.2s;
}

button{
    font-size: 100%;
    line-height: 1.0rem;
    height: 100%;
    margin: 0;
    border: none;
}

.buttonBig {
    min-width: 4em;
    width: 6em;
}

.buttonSmall {
    min-width: 2em;
    width: 2.25em;
}

.btn-primary {
    background-color: var(--cozyButton);
    border-color: var(--cozyButtonAccent);
}

.btn-primary:hover {
    background-color: var(--cozyButtonAccent,#f90);
}

.btn-danger {
    background-color: #f90;
    border-color: #b60;
}

.btn-danger:hover {
    background-color: #b60;
}

#copyright {
    position: absolute;
    color: lightgray;
    font-size: .5em;
    left: 3px;
    bottom: 3px;
}

#copyright.left {
    font-size: .3em;
}

.message {
    background-color: rgba(0, 0, 0, 0.3);
    margin-top: 10px;
    padding-top: .5em;
    border-radius: .2em;
    box-shadow: 0 0 4px black inset;
}

.subMessage:last-of-type {
    padding-bottom: 0.5em;
}

.subMessage {
    position:relative;
    padding: .15em;
    padding-right: 0;
}

.subMessage:hover {
    background-color: rgba(255, 255, 255, 0.05);
}

.subMessage:hover > .deleteMessageButton{
    visibility: visible;
}

.deleteMessageButton {
    z-index: 2;
    position: absolute;
    color: #fff;
    font-weight: bold;
    border: none;
    background-color: var(--cozyButton);
    border-radius: 0.2em;
    top:0.1em;
    right: 0.1em;
    width: 1.25em;
    height: 1.25em;
    visibility: hidden;
    cursor: pointer;
    text-align: center;
    padding: 0;
}
.deleteMessageButton.edit {
    right: 1.5em;
}

.editIcon {
    padding: 15%;
    width: 100%;
    height: 100%;
}


.deleteMessageButton:hover{
    background-color: var(--cozyOrange);
}

.message .chat-image, .message .chat-video, .message .chat-deleted {
    padding-right: 1em;
}

.message .chat-text {
    padding-right: .15em;
}

.message > div:not(.username) {
	font-size: 0.9em;
    padding-left: 1em;
}

#videocontrols {
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    z-index: 2;
}

#chat, .chat-link, .chat-link:hover  {
    color: white;
}

.username {
    font-weight: 600;
    padding-left: 0.5em;
    position: relative;
}

.usernameList {
    font-weight: 600;
    position: relative;
}

.timestamp {
    font-weight: 300;
    font-size: 0.8em;
    color: lightgray;
}

.idSquare {
    font-size: 0.65em;
    top: -0.5em;
    display: inline-block;
    right: 0.25em;
    position: absolute;
    border-radius: 0.2em;
    text-align: center;
    width: 1.8em;
    overflow: hidden;
    opacity: 0.7;
    word-break: keep-all;
    text-shadow:
        0.07em 0 black,
        0 0.07em black,
        -0.07em 0 black,
        0 -0.07em black;
}

.lastSeen{
    font-weight: 300;
    font-size: 0.7em;
    color: lightgray;
}

#messages {
    flex-grow: 1;
    padding-left: 10px;
    padding-right: 10px;
    overflow-y: auto;
    overflow-y: overlay;
    overflow-x: hidden;
    word-break: break-word;
}

#history-mode {
    margin: auto;
}

.chat-video, .chat-image {
    cursor: pointer;
}

.chat-video video {
    height: 100%;
    width: 100%;
    border-radius: 0.2em;
}

.chat-image {
    display: block;
    height: auto;
    min-width: 100%;
    width: 100%;
}
/* ... */

